fix progress bar for new upload